ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: super-ms
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: argo-rollouts.io
    http:
      paths:
      - path: /blue-green
        pathType: ImplementationSpecific
        backend:
          service:
            name: super-ms-active
            port: 
              number: 80
      - path: /canary
        pathType: ImplementationSpecific
        backend:
          service:
            name: super-ms
            port: 
              number: 80
